// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with the correct props 1`] = `
<WithRipple(Button)
  className="button"
  dense={false}
  disabled={false}
  icon={null}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  outlined={false}
  raised={false}
  style={Object {}}
  type="button"
  unbounded={false}
  unelevated={false}
>
  button
</WithRipple(Button)>
`;

exports[`Button should render with the correct props 2`] = `
<WithRipple(Button)
  className="button mockClass"
  dense={false}
  disabled={false}
  icon={null}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  outlined={false}
  raised={false}
  style={Object {}}
  type="button"
  unbounded={false}
  unelevated={false}
>
  mock child
</WithRipple(Button)>
`;

exports[`Button should render with the correct props 3`] = `
<WithRipple(Button)
  className="button mockClass"
  dense={false}
  disabled={false}
  icon={null}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  outlined={false}
  raised={false}
  style={Object {}}
  type="submit"
  unbounded={false}
  unelevated={false}
>
  submit
</WithRipple(Button)>
`;
